@@ -1,11 +1,10 @@
 package de.bonndan.nivio.input.rancher1;
 
 import de.bonndan.nivio.input.InputFormatHandler;
-import de.bonndan.nivio.input.dto.ItemDescription;
 import de.bonndan.nivio.input.dto.LandscapeDescription;
-import de.bonndan.nivio.input.dto.SourceReference;
+import de.bonndan.nivio.input.SourceReference;
 import de.bonndan.nivio.observation.InputFormatObserver;
-import de.bonndan.nivio.util.URLHelper;
+import de.bonndan.nivio.util.URLFactory;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.lang.NonNull;
@@ -13,8 +12,7 @@ import org.springframework.stereotype.Service;
 
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -24,22 +22,22 @@ public class InputFormatHandlerRancher1 implements InputFormatHandler {
 
     @Override
     public List<String> getFormats() {
-        return Arrays.asList("rancher1-prometheus");
+        return List.of("rancher1-prometheus");
     }
 
     @Override
-    public void applyData(@NonNull SourceReference reference, URL baseUrl, LandscapeDescription landscapeDescription) {
+    public List<LandscapeDescription> applyData(@NonNull final SourceReference reference, @NonNull final LandscapeDescription landscapeDescription) {
 
-        String landscape = reference.getLandscapeDescription().getIdentifier();
-
-        String combine = URLHelper.combine(baseUrl, reference.getUrl());
+        String identifier = reference.getSeedConfig().getIdentifier();
+        String combine = URLFactory.combine(reference.getSeedConfig().getBaseUrl(), reference.getUrl().toString());
         try {
             URL url = new URL(combine);
-            PrometheusExporter prometheusExporter = new PrometheusExporter(landscape, url);
+            PrometheusExporter prometheusExporter = new PrometheusExporter(identifier, url);
             landscapeDescription.mergeItems(prometheusExporter.getDescriptions());
         } catch (MalformedURLException e) {
             logger.error("Could not work on prometheus url {}", combine);
         }
+        return Collections.singletonList(landscapeDescription);
     }
 
     @Override
